<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/help_inst1"
            android:layout_alignEnd="@+id/linearLayout"
            android:paddingTop="@dimen/paragraph_padding">
            <edu.ucsb.cs.cs190i.jgee.cardcounting.CustomFontTextView
                app:fontName="Castellar.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basics"
                android:textColor="@color/title"
                android:gravity="center"
                android:textSize="@dimen/title_font"
                android:padding="16dp"
                android:id="@+id/basics"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/paragraph_padding"/>
            <edu.ucsb.cs.cs190i.jgee.cardcounting.CustomFontTextView
                app:fontName="Castellar.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basics_h1"
                android:textColor="@color/header"
                android:gravity="center"
                android:textSize="@dimen/header_font"
                android:padding="16dp"
                android:id="@+id/basics_h1"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/paragraph_padding"/>
            <edu.ucsb.cs.cs190i.jgee.cardcounting.CustomFontTextView
                app:fontName="BASKVILL.TTF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basics_b1"
                android:textColor="@color/bodytext"
                android:gravity="center"
                android:textSize="@dimen/body_font"
                android:padding="16dp"
                android:id="@+id/basics_b1s"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/paragraph_padding"/>
            <edu.ucsb.cs.cs190i.jgee.cardcounting.CustomFontTextView
                app:fontName="Castellar.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basics_h2"
                android:textColor="@color/header"
                android:gravity="center"
                android:textSize="@dimen/header_font"
                android:padding="16dp"
                android:id="@+id/basics_h2"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/paragraph_padding"/>
            <edu.ucsb.cs.cs190i.jgee.cardcounting.CustomFontTextView
                app:fontName="BASKVILL.TTF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basics_b2_1"
                android:textColor="@color/bodytext"
                android:gravity="center"
                android:textSize="@dimen/header_font"
                android:padding="16dp"
                android:id="@+id/basic_b2_1"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/paragraph_padding"/>
            <edu.ucsb.cs.cs190i.jgee.cardcounting.CustomFontTextView
                app:fontName="BASKVILL.TTF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basics_b2_2"
                android:textColor="@color/bodytext"
                android:gravity="center"
                android:textSize="@dimen/header_font"
                android:padding="16dp"
                android:id="@+id/basics_b2_2"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/paragraph_padding"/>
            <edu.ucsb.cs.cs190i.jgee.cardcounting.CustomFontTextView
                app:fontName="BASKVILL.TTF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basics_b2_3"
                android:textColor="@color/bodytext"
                android:gravity="center"
                android:textSize="@dimen/header_font"
                android:padding="16dp"
                android:id="@+id/basics_b2_3"
                android:layout_gravity="center_horizontal"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/linearLayout">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView1"
                    android:src="@drawable/example"/>
                <edu.ucsb.cs.cs190i.jgee.cardcounting.CustomFontTextView
                    app:fontName="Castellar.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text=" =1"
                    android:textSize="@dimen/help_count_val_font"
                    android:textColor="@color/bodytext"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/p1"/>
            </LinearLayout>
            <edu.ucsb.cs.cs190i.jgee.cardcounting.CustomFontTextView
                app:fontName="BASKVILL.TTF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basics_b2_4"
                android:textColor="@color/bodytext"
                android:gravity="center"
                android:textSize="@dimen/body_font"
                android:id="@+id/basics_b2_4"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/paragraph_padding"/>
            <edu.ucsb.cs.cs190i.jgee.cardcounting.CustomFontTextView
                app:fontName="Castellar.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basics_h3"
                android:textColor="@color/header"
                android:gravity="center"
                android:textSize="@dimen/header_font"
                android:padding="16dp"
                android:id="@+id/basics_h3"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/paragraph_padding"/>
            <edu.ucsb.cs.cs190i.jgee.cardcounting.CustomFontTextView
                app:fontName="BASKVILL.TTF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basics_b3_1"
                android:textColor="@color/bodytext"
                android:gravity="center"
                android:textSize="@dimen/body_font"
                android:padding="16dp"
                android:id="@+id/basics_b3_1"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/paragraph_padding"/>
            <edu.ucsb.cs.cs190i.jgee.cardcounting.CustomFontTextView
                app:fontName="BASKVILL.TTF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basics_b3_2"
                android:textColor="@color/bodytext"
                android:gravity="center"
                android:textSize="@dimen/body_font"
                android:padding="16dp"
                android:id="@+id/basics_b3_2"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/paragraph_padding"/>
            <edu.ucsb.cs.cs190i.jgee.cardcounting.CustomFontTextView
                app:fontName="BASKVILL.TTF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basics_b3_3"
                android:textColor="@color/bodytext"
                android:gravity="center"
                android:textSize="@dimen/body_font"
                android:padding="16dp"
                android:id="@+id/basics_b3_3"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/paragraph_padding"/>
            <edu.ucsb.cs.cs190i.jgee.cardcounting.CustomFontTextView
                app:fontName="BASKVILL.TTF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basics_b3_4"
                android:textColor="@color/bodytext"
                android:gravity="center"
                android:textSize="@dimen/body_font"
                android:padding="16dp"
                android:id="@+id/basics_b3_4"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/paragraph_padding"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
