<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content_counting_layout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.ucsb.cs.cs190i.jgee.cardcounting.CountingActivity"
    tools:showIn="@layout/activity_counting"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_header"
            android:textColor="@color/header"
            android:textSize="@dimen/header_font"
            android:id="@+id/time_header"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bodytext"
            android:textSize="@dimen/large_font"
            android:id="@+id/time"
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cards_counted_header"
            android:textColor="@color/header"
            android:textSize="@dimen/header_font"
            android:id="@+id/cards_counted_header"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bodytext"
            android:textSize="@dimen/large_font"
            android:id="@+id/cards_counted"
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_header"
            android:textColor="@color/header"
            android:textSize="@dimen/header_font"
            android:id="@+id/count_header"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bodytext"
            android:textSize="@dimen/large_font"
            android:id="@+id/count"
            android:visibility="invisible"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_prompt"
        android:textColor="@color/bodytext"
        android:textSize="40sp"
        android:padding="20dp"
        android:id="@+id/prompt"
        android:layout_gravity="center_horizontal"/>


    <edu.ucsb.cs.cs190i.jgee.cardcounting.PlayingCardView
        android:layout_width="250dp"
        android:layout_height="350dp"
        android:clickable="true"
        android:onClick="startCounting"
        android:id="@+id/card"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:layout_width="@dimen/circle_button_dimen"
                android:layout_height="@dimen/circle_button_dimen"
                android:textSize="@dimen/circle_button_font"
                android:textColor="@color/bodytext"
                android:id="@+id/left_button"
                android:visibility="invisible"
                android:background="@drawable/button_chip"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:layout_width="@dimen/circle_button_dimen"
                android:layout_height="@dimen/circle_button_dimen"
                android:id="@+id/middle_button"
                android:textSize="@dimen/circle_button_font"
                android:textColor="@color/bodytext"
                android:visibility="invisible"
                android:background="@drawable/button_chip"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:layout_width="@dimen/circle_button_dimen"
                android:layout_height="@dimen/circle_button_dimen"
                android:id="@+id/right_button"
                android:textSize="@dimen/circle_button_font"
                android:textColor="@color/bodytext"
                android:visibility="invisible"
                android:background="@drawable/button_chip" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
